# Fast_Merge_Excel

./: .cursor-agent  .gitignore  A.xlsx  B.xlsx  BL.xlsx  BL_meisai.xlsx  Cargo.toml  NYUKIN_UFJ_前期.xlsx  NYUKIN_UFJ_当期.xlsx  UFJ.xlsx  build.rs  consolidated.xlsx.tmp  crash_log.txt  meisai.xlsx  merged_output.csv  merged_output.xlsx  merged_output.xlsx.tmp  merged_output.xlsxtmp  spec.md  ~$merged_output.xlsx  未収残リスト.xlsx
src/: app.rs  font_util.rs  main.rs
src/components/: button.rs  cleaner.rs  column_selector.rs  compare_file_selector.rs  compare_key_selector.rs  file_selector.rs  join_type_picker.rs  key_selector.rs  mod.rs  multi_stage_file_selector.rs  multi_stage_key_selector.rs  preview_async.rs  preview_spinner.rs  preview_table.rs  save_panel.rs  sort_settings.rs  split_file_selector.rs
src/steps/: async_step.rs  concat_wizard.rs  hikaku_wizard.rs  kanzen_icchi_wizard.rs  mod.rs  mode_selector.rs  multi_stage_wizard.rs  split_save_wizard.rs  step_column_select.rs  step_complete.rs  step_file_select.rs  step_key_select.rs  step_preview.rs  step_save_panel.rs  zennen_taihi_wizard.rs
src/utils/: excel.rs  excel_style.rs  mod.rs
umya-spreadsheet/accesskit_unix/: .cargo-checksum.json  Cargo.toml
umya-spreadsheet/accesskit_winit/: .cargo-checksum.json  Cargo.toml
umya-spreadsheet/arboard/: .cargo-checksum.json
umya-spreadsheet/argminmax/: .cargo-checksum.json
umya-spreadsheet/array-init-cursor/: .cargo-checksum.json
umya-spreadsheet/async-once-cell/: .cargo-checksum.json  Cargo.toml
umya-spreadsheet/atspi-common/: .cargo-checksum.json  Cargo.toml
(+80 files in other folders)
