[package]
name = "magic_merge_excel_2"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.26.0", features = ["wgpu", "glow"] }
egui = "0.26.0"
egui_extras = "0.26.0"
rfd = "0.12.1"
calamine = "0.22.1"
polars = { version = "0.35.4", features = ["lazy", "csv"] }
csv = "1.3"
umya-spreadsheet = "1.0"
dialoguer = "0.11"
rust-analyzer = "0.0.1"
winit = "0.28"
env_logger = "0.10"

[build-dependencies]
embed-resource = "2"


